--- a/project/app/templates/faculty/StdApprove.html
+++ b/project/app/templates/faculty/StdApprove.html
@@ -111,7 +111,7 @@
                     <img class="rounded-full w-[4rem] h-[4rem] border-red-500 border-2" src="{% static 'placeholder_image.jpg' %}" alt="profile"> 
                 {% endif %}
                     <h1 class="text-xl font-semibold mb-2">Name :{{ i.user.first_name }} {{ i.user.last_name }}</h1>
-                    <p class="text-sm text-gray-600 mb-2">Date Of Birth: {{ i.Student_Dob|date:"Y/n/j" }}</p>
+                    <p class="text-sm text-gray-600 mb-2">Date Of Birth: {{ i.Student_Dob}}</p>
                     <p class="text-sm text-gray-600 mb-4">Phone Num : {{ i.Student_PhoneNum }}</p>
                     <p class="text-sm text-gray-600 mb-4">Department : {{ i.Student_Department.department_name }}</p>
                     <div class="flex justify-center">
