--- a/project/app/templates/Principal/PrincipalViewHod.html
+++ b/project/app/templates/Principal/PrincipalViewHod.html
@@ -78,7 +78,7 @@
             
         <div>
             <p>Name :  {{principal.user.username}}</p><p>{{principal.user.last_name}}</p>
-            <p>Date Of Join : {{principal.principal_Doj}}</p>
+            {% comment %} <p>Date Of Join : {{principal.principal_Doj}}</p> {% endcomment %}
         </div>
     </div>
 <div class="flex">
