--- a/project/app/templates/Principal/PrincipalAttendance.html
+++ b/project/app/templates/Principal/PrincipalAttendance.html
@@ -97,7 +97,7 @@
             
             <div >
                 <p>Name :  {{principal.user.first_name}}</p><p>{{principal.user.last_name}}</p>
-                <p>Date Of Join : {{principal.principal_Doj}}</p>
+                {% comment %} <p>Date Of Join : {{principal.principal_Doj}}</p> {% endcomment %}
             </div>
     </div>
     </div>
