--- a/project/app/templates/Principal/PrincipalViewLeaveletters.html
+++ b/project/app/templates/Principal/PrincipalViewLeaveletters.html
@@ -77,7 +77,7 @@
             
         <div>
             <p>Name :  {{principal.user.usename}}</p><p>{{principal.user.last_name}}</p>
-            <p>Date Of Join : {{principal.principal_Doj}}</p>
+            {% comment %} <p>Date Of Join : {{principal.principal_Doj}}</p> {% endcomment %}
         </div>
     </div>
 
