--- a/project/app/templates/hod/HodInternal.html
+++ b/project/app/templates/hod/HodInternal.html
@@ -76,7 +76,7 @@
         <div >
             <p>Name : {{hod.user.first_name}}</p>
             <p>Designation : {{hod.Hod_Designation}}</p>
-            <p>Date Of Join : {{hod.Hod_Doj}}</p>
+            {% comment %} <p>Date Of Join : {{hod.Hod_Doj}}</p> {% endcomment %}
         </div>
 </div>
 
