--- a/project/app/templates/home/index.html
+++ b/project/app/templates/home/index.html
@@ -33,7 +33,7 @@
             right: 0;
             bottom: 0;
             left: 0;
-            background-image: url('{% static "img/kaimanam.jpg" %}');
+            background-image: url('{% static "img/cpt.jpg" %}');
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
