--- a/project/app/templates/register/login.html
+++ b/project/app/templates/register/login.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Form Title</title>
+    <title>Register</title>
     <style media="screen">
         body {
             background-color: rgba(255, 255, 255, 0.07);
@@ -37,22 +37,17 @@
         <form class="flex flex-col gap-3 text-gray-800" method="post">
             {% csrf_token %}
             <div class="block relative">
-                <label for="username"
-                    class="block text-gray-800 cursor-text text-sm leading-[140%] font-normal mb-2">Username</label>
-                <input autocomplete="new-username" name="username" type="text" id="username" value=""
-                    class="rounded border border-gray-800 text-sm w-full font-normal leading-[18px] text-black tracking-[0px] appearance-none block h-11 m-0 p-[11px] focus:ring-2 ring-offset-2  ring-gray-900 outline-0">
+
+                <label for="username"class="block text-gray-800 cursor-text text-sm leading-[140%] font-normal mb-2">Username</label>
+                <input autocomplete="new-username" name="username" type="text" id="username" value="" class="rounded border border-gray-800 text-sm w-full font-normal leading-[18px] text-black tracking-[0px] appearance-none block h-11 m-0 p-[11px] focus:ring-2 ring-offset-2  ring-gray-900 outline-0">
 
 
-
-                <label for="password"
-                    class="block text-gray-800 cursor-text text-sm leading-[140%] font-normal mb-2">Password</label>
+                <label for="password" class="block text-gray-800 cursor-text text-sm leading-[140%] font-normal mb-2">Password</label>
                 <div class="flex items-center">
-                    <input autocomplete="off" name="password" type="password" id="password"
-                        class="rounded border border-gray-800 text-sm w-full font-normal leading-[18px] text-black tracking-[0px] appearance-none block h-11 m-0 p-[11px] focus:ring-2 ring-offset-2 ring-gray-900 outline-0">
-                    <!-- Button to toggle password visibility -->
-                    <button type="button" id="togglePasswordVisibility"
-                        class="ml-2 text-sm text-gray-800 focus:outline-none" >Show</button>
+                    <input autocomplete="off" name="password" type="password" id="password" class="rounded border border-gray-800 text-sm w-full font-normal leading-[18px] text-black tracking-[0px] appearance-none block h-11 m-0 p-[11px] focus:ring-2 ring-offset-2 ring-gray-900 outline-0">
+                    <button type="button" id="togglePasswordVisibility" class="ml-2 text-sm text-gray-800 bg-gray-300 p-2 rounded-2xl focus:outline-none" >Show</button>
                 </div>
+
             </div>
             <div class="flex">
             <button type="submit"
@@ -72,7 +67,7 @@
 
     </div>
     <div class=" w-1/2 flex items-center content-center justify-center">
-        <img class="clg" src="{% static 'img/kaimanam.jpg' %}">
+        <img class="clg" src="{% static 'img/cpt.jpg' %}">
     </div>
 </body>
 <script>
