--- a/project/app/templates/register/register.html
+++ b/project/app/templates/register/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Form Title</title>
+    <title>Register</title>
     <style media="screen">
         *,
   *:before,
